// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotionListItem should match previous snapshot 1`] = `
<styled.li
  borderTop="solid 1px #DBD9D2"
  paddingBottom="3em"
  paddingTop="2em"
>
  <Paragon
    lineHeight="initial"
    margin={0}
    tag="h2"
    textTransform="capitalize"
  >
    abcd
  </Paragon>
  <BodyCopy
    lineHeight="initial"
    margin={0}
  >
    dummy description
  </BodyCopy>
  <styled.ul
    display="grid"
    gridAutoFlow="row"
    gridGap="1em"
    gridTemplateColumns="repeat(auto-fill, minmax(250px, 1fr))"
    listStyle="none"
    marginTop="2em"
    padding={0}
  />
</styled.li>
`;

exports[`NotionListItem should match previous snapshot with lessons 1`] = `
<styled.li
  borderTop="solid 1px #DBD9D2"
  paddingBottom="3em"
  paddingTop="2em"
>
  <Paragon
    lineHeight="initial"
    margin={0}
    tag="h2"
    textTransform="capitalize"
  >
    abcd
  </Paragon>
  <BodyCopy
    lineHeight="initial"
    margin={0}
  >
    dummy description
  </BodyCopy>
  <styled.ul
    display="grid"
    gridAutoFlow="row"
    gridGap="1em"
    gridTemplateColumns="repeat(auto-fill, minmax(250px, 1fr))"
    listStyle="none"
    marginTop="2em"
    padding={0}
  >
    <LessonListItem
      description="Lorem ipsum dolor sit amet."
      disabled={false}
      id="1"
      key="1"
      name="lesson 1"
      t={[Function]}
    />
    <LessonListItem
      description="Lorem ipsum dolor sit amet."
      disabled={false}
      id="2"
      key="2"
      name="lesson 2"
      t={[Function]}
    />
    <LessonListItem
      description="Lorem ipsum dolor sit amet."
      disabled={false}
      id="3"
      key="3"
      name="lesson 3"
      t={[Function]}
    />
  </styled.ul>
</styled.li>
`;
